marketplace-k8s/minikube/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: market-gateway
    spec:
      containers:
      - name: market-gateway
        image: eng9/marketplace-gateway:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'  # 500 millicores (0.5 CPU)
            memory: 512Mi  # Reduced to 512 MiB
          requests:
            cpu: 100m  # 100 millicores (0.1 CPU)
            memory: 100Mi  # Reduced to 100 MiB
        ports:
        - name: gateway
          containerPort: 4000
