marketplace-k8s/minikube/1-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-gateway-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-gateway
  defaultBackend:
   service:
     name: market-gateway
     port:
       number: 4000
  rules:
    host: marketplace.com
  - http:
      paths:
      - path: /api/gateway/v1
        pathType: Prefix
        backend:
          service:
            name: market-gateway
            port:
              number: 4000
